# aria

./: .gitignore  CMakeLists.txt  README.md  aria.db  com.persepolis.pdmchromewrapper (2).json  com.persepolis.pdmchromewrapper.json  新建文本文档.txt
WebExtension/: background.js  manifest.json
WebExtension/popup/: popup.html
aria/: CMakeLists.txt  aria.rc  ariaButton.cpp  ariaButton.h  ariaHttpServer.cpp  ariaHttpServer.h  ariaListWgt.cpp  ariaListWgt.h  ariaPanel.cpp  ariaPanel.h  ariaSetting.cpp  ariaSetting.h  ariaSys.cpp  ariaSys.h  ariaUi.cpp  ariaUi.h  ariaUi.qrc  frameless.cpp  frameless.h  main.cpp  singleapplication_p.h  taskDatabase.cpp  taskDatabase.h  taskDetailWgt.cpp  taskDetailWgt.h  taskInfo.cpp  taskInfo.h  uriLink.cpp  uriLink.h
aria/httpserver/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header.h  mime_types.cpp  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h
libaria/: CMakeLists.txt  Context.h  GroupId.cc  GroupId.h  IndexedList.h  Makefile.in  Metalink2RequestGroup.cc  MultiUrlRequestInfo.h  Notifier.h  OptionHandlerFactory.cc  OptionParser.h  Platform.cc  RequestGroup.h  RequestGroupMan.cc  RequestGroupMan.h  RpcMethodImpl.cc  SessionSerializer.cc  TorrentAttribute.h  alloca.c  aria2.h  aria2api.cc  aria2api.h  common.h  config.h  download_helper.cc  main.cc  option_processing.cc  prefs.cc  prefs.h
libaria/aria2/: aria2.h
libaria/includes/: Makefile.in
ui/: CMakeLists.txt  app.h  common.h  imconfig.h  imgui.cpp  imgui_app.cpp  imgui_app.h  imgui_dlg.cpp  imgui_dlg.h  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_tables.cpp  imgui_widgets.cpp
